--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python = "^3.11"
 langgraph = "^0.6.7"
 langsmith = "^0.4.27"
 langchain = "^0.3.27"
+langchain-openai = "^0.3.33"
 
 
 [build-system]
