--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ langgraph = "^0.6.7"
 langsmith = "^0.4.27"
 langchain = "^0.3.27"
 langchain-openai = "^0.3.33"
+langgraph-checkpoint-mongodb = "^0.2.0"
+msgpack = "^1.1.1"
 
 
 [build-system]
