--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ langchain = "^0.3.27"
 langchain-openai = "^0.3.33"
 langgraph-checkpoint-mongodb = "^0.2.0"
 msgpack = "^1.1.1"
+langchain-mongodb = "^0.7.0"
 
 
 [build-system]
